# Aximcomp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PAPER.md  PAPER.tex  README.md  SECURITY.md  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  docs.yml
axim_compiler/: README.md  __init__.py  pyproject.toml  synaxim_bridge.py
axim_compiler/backend_cpu/: CMakeLists.txt
axim_compiler/backend_cpu/include/: axim_blas.h  axim_cpu.h  axim_dnn.h
axim_compiler/backend_cpu/src/: axim_blas.cpp  axim_cpu.cpp  axim_dnn.cpp
axim_compiler/backend_gpu/: bench_vulkan.cpp  test_metal.py  test_vulkan_executor.cpp
axim_compiler/backend_gpu/include/: axim_gpu.h  axim_vulkan_executor.h
axim_compiler/backend_gpu/shaders/: build_shaders.ps1  build_shaders.sh
axim_compiler/backend_gpu/shaders/metal/: axim_kernels.metal
axim_compiler/backend_gpu/shaders/vulkan/: axim_add.comp  axim_int4_matvec.comp  axim_rmsnorm.comp  axim_silu.comp  axim_swiglu.comp
axim_compiler/backend_gpu/src/: axim_gpu.cpp  axim_metal.mm  axim_vulkan_executor.cpp
axim_compiler/examples/: hello_world.py  synaxim_on_axim.py
axim_compiler/frontend/: __init__.py  api.py  synaxim_ops.py
axim_compiler/graphics/include/: axim_gfx.h
axim_compiler/graphics/src/: axim_gfx_metal.mm
axim_compiler/hip/: example_cuda_port.cpp
axim_compiler/hip/include/: axim_hip.h
axim_compiler/hip/src/: axim_hip.cpp
axim_compiler/ir/: axim_ir.py
axim_compiler/loader/: __init__.py  symb_loader.py
axim_compiler/orchestrator/: Cargo.toml  __init__.py  build.rs  dispatch.py  synaxim_dispatch.py
axim_compiler/orchestrator/src/: lib.rs
axim_compiler/tests/: test_loader.py  test_pipeline.py  test_synaxim.py
axim_compiler/tools/: aximinfo.py
axim_core/: Cargo.toml  build.rs
axim_core/src/: display_manager.rs  lib.rs  thunderbolt_handshake.rs
axim_foundation/: CMakeLists.txt
axim_foundation/include/: edge_rail_thermal.h  ghost_touch.h  kv_cache.h  vision.h
axim_foundation/src/: edge_rail_thermal.cpp  ghost_touch.cpp  kv_cache.cpp  vision.cpp
axim_sdk/: pyproject.toml  requirements.txt  test_agent_gemma.py  test_multimodal.py
axim_sdk/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim_sdk/axim_sdk/tools/: bash.py  predictor.py
docs/: OVERLEAF.md  api.md  architecture.md  backends.md  ci.md  getting-started.md  index.md  ir.md  libraries.md  loader.md  synaxim.md
notebooks/: README.md  axim_bench.py  axim_gpu_bench_marimo.py  requirements.txt
scripts/: make_bench_charts.py  run_gpu_bench.sh
wiki/: CUDA-Porting.md  FAQ.md  Graphics-and-Gaming.md  Home.md  Quick-Start.md  Roadmap.md
